--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ nav ul li a:hover::after {
 
 .projects-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
     grid-gap: 40px;
     margin-top: 50px;
 }
